@@ -1,0 +1,83 @@
+package org.apache.solr.client.solrj.embedded;
+
+import org.apache.lucene.util.LuceneTestCase;
+import org.apache.solr.SolrTestCaseJ4;
+import org.apache.solr.client.solrj.SolrServer;
+import org.apache.solr.core.CoreContainer;
+import org.apache.solr.util.AbstractSolrTestCase;
+import org.junit.After;
+import org.junit.Before;
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
+
+import java.io.File;
+
+public abstract class AbstractEmbeddedSolrServerTest extends LuceneTestCase {
+
+  protected static Logger log = LoggerFactory.getLogger(AbstractEmbeddedSolrServerTest.class);
+
+  protected static final File SOLR_HOME = SolrTestCaseJ4.getFile("solrj/solr/shared");
+
+  protected CoreContainer cores = null;
+  protected File tempDir;
+
+  private void createTempDir() {
+    tempDir = new File(TEMP_DIR, "solrtest-" + getTestClass().getSimpleName() + "-" + System.currentTimeMillis());
+    tempDir.mkdirs();
+  }
+
+  @Override
+  @Before
+  public void setUp() throws Exception {
+    super.setUp();
+
+    System.setProperty("solr.solr.home", SOLR_HOME.getAbsolutePath());
+
+    //The index is always stored within a temporary directory
+    createTempDir();
+    System.setProperty("tempDir", tempDir.getAbsolutePath());
+
+    cores = new CoreContainer(SOLR_HOME.getAbsolutePath(), getSolrXml());
+  }
+  
+  protected abstract File getSolrXml() throws Exception;
+
+  @Override
+  @After
+  public void tearDown() throws Exception {
+    if (cores != null)
+      cores.shutdown();
+
+    deleteAdditionalFiles();
+
+    File dataDir = new File(tempDir,"data");
+    String skip = System.getProperty("solr.test.leavedatadir");
+    if (null != skip && 0 != skip.trim().length()) {
+      log.info("NOTE: per solr.test.leavedatadir, dataDir will not be removed: " + dataDir.getAbsolutePath());
+    } else {
+      //Removing the temporary directory which contains the index (all other files should have been removed before)
+      if (!AbstractSolrTestCase.recurseDelete(tempDir)) {
+        log.warn("!!!! WARNING: best effort to remove " + dataDir.getAbsolutePath() + " FAILED !!!!!");
+      }
+    }
+
+    super.tearDown();
+  }
+
+  protected void deleteAdditionalFiles() {
+
+  }
+
+  protected SolrServer getSolrCore0() {
+    return getSolrCore("core0");
+  }
+
+  protected SolrServer getSolrCore1() {
+    return getSolrCore("core1");
+  }
+
+  protected SolrServer getSolrCore(String name) {
+    return new EmbeddedSolrServer(cores, name);
+  }
+
+}
